# String

./: CMakeLists.txt  README.md  first_task.c  first_task_runner.bat  main.c  my_str_t.c  my_str_t.h  second_task.c  second_task.h  second_task_runner.bat
examples/: CMakeLists.txt  first_task.c  first_task_runner.bat  second_task.c  second_task_runner.bat
lib/: CMakeLists.txt
lib/include/: my_str_t.h
lib/src/: my_str_t.c
src/: my_str_t.c
